--- a/index.html
+++ b/index.html
@@ -10,24 +10,18 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1><a href="index.html">SweetFactory</a></h1>
+                <h1><a href="index.html">202445049</a></h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">홈</a></li>
-                    <li><a href="introduce.html">회사소개</a></li>
-                    <li><a href="products.html">제품</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="introduce.html">introduce</a></li>
+                    <li><a href="products.html">product</a></li>
+                    <li><a href="about.html">about</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
-    <section id="showcase">
-        <div class="container">
-            <h1>작은 달콤함이 큰 행복이 됩니다</h1>
-            <p>SweetFactory는 자연 재료로 만든 프리미엄 아이스크림과 수제 디저트를 통해 고객에게 최고의 맛과 즐거움을 선사합니다.</p>
-        </div>
-    </section>
 
     <div class="container">
         <section id="main-content">
