--- a/products.html
+++ b/products.html
@@ -14,9 +14,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">홈</a></li>
-                    <li><a href="introduce.html">회사소개</a></li>
-                    <li><a href="products.html">제품</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="introduce.html">introduce</a></li>
+                    <li><a href="products.html">product</a></li>
+                    <li><a href="about.html">about</a></li>
                 </ul>
             </nav>
         </div>
